--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     </header>
     <!-- BLOC 1 -->
     <section id="bloc-1">
-        <img src="/img/logo-gc-hero.png" alt="logo-hero">
+        <img src="./img/logo-gc-hero.png" alt="logo-hero">
         <h1>passion. professionnalisme. performance.</h1>
         <button class="btn-bloc1">Gaming campus en video ></button>
     </section>
@@ -40,7 +40,7 @@
     <section id="bloc-2">
         <div>
             <div>
-                <img src="/img/logo-gbs-home.png" alt="log-gbs">
+                <img src="./img/logo-gbs-home.png" alt="log-gbs">
             </div>
             <h3>Gaming business school</h3>
             <p>Formez-vous dans la première école de management dédiée aux enjeux et métiers du jeu vidéo</p>
@@ -48,7 +48,7 @@
         </div>
         <div>
             <div>
-                <img src="/img/logo-ga-home.png" alt="logo-ga">
+                <img src="./img/logo-ga-home.png" alt="logo-ga">
             </div>
             <h3>Gamaing academy</h3>
             <p>Entrainez-vous dans des conditions optimales pour devenir esportif professionnel</p>
@@ -56,7 +56,7 @@
         </div>
         <div>
             <div>
-                <img src="/img/logo-gg-home.png" alt="logo-home">
+                <img src="./img/logo-gg-home.png" alt="logo-home">
             </div>
             <h3>Gaming Guru</h3>
             <p>jouez avec les meilleurs gamers pour vous ameliorer dans vos jeux vidéos préférés</p>
@@ -76,40 +76,41 @@
     <section id="bloc-4">
         <div>
             <div>
-                <img src="/img/ri8decembre.jpg" alt="image-8decembre">
+                <img src="./img/ri8decembre.jpg" alt="image-8decembre">
             </div>
             <h5>Reunion d'information 19 décembre</h5>
             <p>Venez à notre rencontre lors de la réunion d'information.Témoignages des étudiants / Ateliers sur la
                 pédagogie par projet *Active learning by Gaming Campus* / Découverte des locaux / Rencontre avec
                 l'équipe
                 pédagogique/Questions réponses</p>
-            <button class="btn-bloc4">sur inscription</button>
+            <button class="btn-bloc4">sur inscription ></button>
         </div>
         <div>
             <div>
-                <img src="/img/pgw18home.jpg" alt="18home-image" srcset="">
+                <img src="./img/pgw18home.jpg" alt="18home-image" srcset="">
             </div>
             <h5>Paris Games Week 2018 et réunions d'information</h5>
             <p>Pendant tout le mois venez rencontrer l'équipe pédagogique du Gaming Campus: Campus Lyon et stand Gaming
                 Campus à la PGW18</p>
-            <button class="btn-bloc4">Lire la suite</button>
+            <button class="btn-bloc4">Lire la suite > </button></button>
         </div>
         <div>
             <div>
-                <img src="/img/inauguration_gaming_campus_photo.jpg" alt="inauguration" srcset="">
+                <img src="./img/inauguration_gaming_campus_photo.jpg" alt="inauguration" srcset="">
             </div>
             <h5>Inauguration Gaming Campus Lyon</h5>
             <p>Revivez l'inauguration du Gaming Campus Lyon avec 180 invités, les grands annonces de la rentré, les
                 photos
                 de la soirée et les premiàres dates de réunions d'informations</p>
-            <button class="btn-bloc4">Lire la suite</button>
+            <button class="btn-bloc4">Lire la suite ></button>
         </div>
         </div>
     </section>
     <!-- BLOC 5  -->
     <section id="bloc-5">
+
         <div id="logo-campus">
-            <img src="/img/logo-gc-footer.jpg" alt="logo-campus">
+            <img src="./img/logo-gc-footer.jpg" alt="logo-campus">
         </div>
         <div id="infos-pratiques">
             <h3>INFOS PRATIQUES</h3>
@@ -131,10 +132,8 @@
         </div>
         <div id="nous-contacter">
             <h3>NOUS CONTACTER</h3>
-            <ul>
-                <li>Tél: 06 28 29 81 03</li>
-                <li>contact@gamingcampus.fr</li>
-            </ul>
+            <li>Tél: 06 28 29 81 03</li>
+            <li>contact@gamingcampus.fr</li>
             <h3>NOUS SUIVRE</h3>
             <ul id="reseaux">
                 <li><i class="fab fa-twitter"></i></li>
@@ -144,6 +143,7 @@
             </ul>
             <span>@2018 Gaming Campus Tout droits réservés</span>
         </div>
+
     </section>
     <!-- BLOC 6 -->
     <section id="bloc-6">
@@ -152,30 +152,30 @@
             <p>Voir toutes les retombées presse</p>
         </div>
         <div id="logo-presse">
-            <img src="/img/figaro.png" alt="figaeo">
-            <img src="/img/challenges.png" alt="challenges">
-            <img src="/img/leparisien.png" alt="leparisien">
-            <img src="/img/lemonde.png" alt="lemonde">
-            <img src="/img/progres.png" alt="leprogret">
-            <img src="/img/echos.png" alt="lesEchos">
-            <img src="/img/bfm.png" alt="bfm">
-            <img src="/img/lepoint.png" alt="lequipe">
+            <img src="./img/figaro.png" alt="figaeo">
+            <img src="./img/challenges.png" alt="challenges">
+            <img src="./img/leparisien.png" alt="leparisien">
+            <img src="./img/lemonde.png" alt="lemonde">
+            <img src="./img/progres.png" alt="leprogret">
+            <img src="./img/echos.png" alt="lesEchos">
+            <img src="./img/bfm.png" alt="bfm">
+            <img src="./img/lepoint.png" alt="lequipe">
         </div>
     </section>
     </main>
     <footer>
         <h3>PARTENAIRES OFFICIELS</h3>
         <ul>
-            <li><img src="/img/apollo.png" alt="appolo" srcset=""></li>
-            <li><img src="/img/chiliz.png" alt="chiliz" srcset=""></li>
-            <li><img src="/img/omen.png" alt="omen" srcset=""></li>
-            <li><img src="/img/joa.png" alt="joa" srcset=""></li>
-            <li><img src="/img/zol.png" alt="zol" srcset=""></li>
-            <li><img src="/img/maxonomic.png" alt="maxonomic"></li>
-            <li><img src="/img/credit-mutuel.png" alt="credit-mutuelle"></li>
-            <li><img src="/img/talent-web.png" alt="talent-web" srcset=""></li>
-            <li><img src="/img/ubisoft.png" alt="ubisoft" srcset=""></li>
-            <li><img src="/img/vitality.png" alt="vitaly"></li>
+            <li><img src="./img/apollo.png" alt="appolo" srcset=""></li>
+            <li><img src="./img/chiliz.png" alt="chiliz" srcset=""></li>
+            <li><img src="./img/omen.png" alt="omen" srcset=""></li>
+            <li><img src="./img/joa.png" alt="joa" srcset=""></li>
+            <li><img src="./img/zol.png" alt="zol" srcset=""></li>
+            <li><img src="./img/maxonomic.png" alt="maxonomic"></li>
+            <li><img src="./img/credit-mutuel.png" alt="credit-mutuelle"></li>
+            <li><img src="./img/talent-web.png" alt="talent-web" srcset=""></li>
+            <li><img src="./img/ubisoft.png" alt="ubisoft" srcset=""></li>
+            <li><img src="./img/vitality.png" alt="vitaly"></li>
         </ul>
     </footer>
 </body>
