--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                 <li><a href="#">Le campus</a></li>
                 <li><a href="#">Newsroom</a></li>
                 <LI><a href="#">Parents</a></LI>
-                <li id="btn-nav"><a href="#">FR I EN</a></li>
+                <li id="btn-nav"><a href="#">FR | EN</a></li>
             </ul>
         </nav>
     </header>
