mise a jour version mobile

--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
                 <li><i class="fab fa-linkedin"></i></i></li>
                 <li><i class="fab fa-instagram-square"></i></li>
             </ul>
-            <span>@2018 Gaming Campus Tout droits réservés</span>
+            <p>@2018 Gaming Campus Tout droits réservés</p>
         </div>
 
     </section>
