--- a/index.html
+++ b/index.html
@@ -29,7 +29,9 @@
     </header>
     <!-- BLOC 1 -->
     <section id="bloc-1">
-        <img src="./img/logo-gc-hero.png" alt="logo-hero">
+        <div id="logo-bloc1">
+            <img src="./img/logo-gc-hero.png" alt="logo-hero">
+        </div>
         <h1>passion. professionnalisme. performance.</h1>
         <button class="btn-bloc1">Gaming campus en video ></button>
     </section>
