--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             <img src="./img/logo-gc-hero.png" alt="logo-hero">
         </div>
         <h1>passion. professionnalisme. performance.</h1>
-        <button class="btn-bloc1">Gaming campus en video ></button>
+        <button class="btn-bloc1">Gaming campus en video <i class="fas fa-chevron-right"></i></button>
     </section>
     <!-- paragraphe -->
     <p id="para1">Imaginé par des professionnels des jeux vidéos et de l'éducation Gaming Campus est un lieu unique
@@ -72,7 +72,7 @@
             <h2>Les news du campus</h2>
             <p>Suivez l'actualité de Campus, de G Guru, G.B.S et G.Academy</p>
         </div>
-        <button class="btn-bloc3">La newroom ></button>
+        <button class="btn-bloc3">La newroom<i class="fas fa-chevron-right"></i></button>
     </section>
     <!-- BLOC 4 -->
     <section id="bloc-4">
@@ -85,7 +85,7 @@
                 pédagogie par projet *Active learning by Gaming Campus* / Découverte des locaux / Rencontre avec
                 l'équipe
                 pédagogique/Questions réponses</p>
-            <button class="btn-bloc4">sur inscription ></button>
+            <button class="btn-bloc4">sur inscription <i class="fas fa-chevron-right"></i></button>
         </div>
         <div>
             <div>
@@ -94,7 +94,7 @@
             <h5>Paris Games Week 2018 et réunions d'information</h5>
             <p>Pendant tout le mois venez rencontrer l'équipe pédagogique du Gaming Campus: Campus Lyon et stand Gaming
                 Campus à la PGW18</p>
-            <button class="btn-bloc4">Lire la suite > </button></button>
+            <button class="btn-bloc4">Lire la suite<i class="fas fa-chevron-right"></i> </button></button>
         </div>
         <div>
             <div>
@@ -104,7 +104,7 @@
             <p>Revivez l'inauguration du Gaming Campus Lyon avec 180 invités, les grands annonces de la rentré, les
                 photos
                 de la soirée et les premiàres dates de réunions d'informations</p>
-            <button class="btn-bloc4">Lire la suite ></button>
+            <button class="btn-bloc4">Lire la suite <i class="fas fa-chevron-right"></i></button>
         </div>
         </div>
     </section>
@@ -150,7 +150,7 @@
     <!-- BLOC 6 -->
     <section id="bloc-6">
         <div id="presse">
-            <h5>Ils parles de nous</h5>
+            <h5>Ils parlent de nous</h5>
             <p>Voir toutes les retombées presse</p>
         </div>
         <div id="logo-presse">
